# edge-detection-course

./: CMakeLists.txt  README.md  circle.yml
src/: CMakeLists.txt  detect.cpp  main.cpp
src/cmd/: main.cpp
src/cpp/: edges.cpp  utils.cpp
src/include/: detect.h  edges.h  utils.h
test/: CMakeLists.txt  test.cpp
